Fixed alignments - removed all styling
Kept basic styling that was required. Removed all other unnecessary styling.

--- a/style.css
+++ b/style.css
@@ -32,5 +32,5 @@ h1 {
 	 height: 22rem;
 }
 .buffer2 {
-	height:4rem;
+	height:25rem;
 }
